--- a/Prototyping/Prototyping.vcxproj.filters
+++ b/Prototyping/Prototyping.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="HudHealth.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HudScore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -99,6 +102,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="HudHealth.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HudScore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
